# pygame_submarine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: game_entities.py  graphic.py  lodka_game.py  submarine_game.py
tests/: test_game_entities.py
